# a11y_experiment

./: COMO_RODAR.md  Dockerfile  Dockerfile.gpu  PIPELINE_PROCESSES.md  README.md  README_EN.md  WINDOWS.md  apresentacao_metodologia.tex  cleanup.sh  collect.ps1  collect.sh  corrections_review.html  diagnose.sh  docker-compose.gpu.yml  docker-compose.yml  fix_and_rescan.sh  fix_env.sh  fix_scanners.ps1  fix_scanners.sh  models.yaml  pyproject.toml  remote_setup.sh  reset_all.ps1  reset_all.sh  reset_scan.ps1  reset_scan.sh  run_experiment.ps1  run_experiment.sh  run_pipeline.py  server_setup.sh  setup.ps1  setup.sh  setup_linux.sh  start_experiment.sh  transfer_to_gpu.sh  watch.ps1  watch.sh  watch_experiment.py
a11y_autofix/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
a11y_autofix/agents/: __init__.py  base.py  deterministic_baseline.py  direct_llm.py  openhands.py  prompts.py  swe.py
a11y_autofix/experiments/: __init__.py  config_schema.py  metrics.py  runner.py
a11y_autofix/llm/: __init__.py  base.py  client.py  registry.py
a11y_autofix/llm/backends/: __init__.py  custom.py  llamacpp.py  lm_studio.py  ollama.py  vllm.py
a11y_autofix/protocol/: __init__.py  detection.py
a11y_autofix/reporter/: __init__.py  comparison_reporter.py  html_reporter.py  json_reporter.py
a11y_autofix/router/: __init__.py  engine.py
a11y_autofix/scanner/: __init__.py  axe.py  base.py  eslint.py  lighthouse.py  orchestrator.py  pa11y.py  playwright_axe.py
a11y_autofix/utils/: __init__.py  files.py  git.py  gpu_monitor.py  hashing.py  http_server.py  ui.py
a11y_autofix/validation/: __init__.py  layer2.py  pipeline.py
analysis/: __init__.py  statistical_analyser.py
dataset/: ANNOTATION_GUIDELINES.md  PROTOCOL.md  README.md  README_DATASET_COMPLETE.md
dataset/catalog/: projects.yaml  projects_backup_20260302_184013.yaml
dataset/fixtures/: __init__.py  catalog.yaml  evaluator.py
dataset/results/: dataset_validation_report.json  live_findings.jsonl
dataset/schema/: __init__.py  models.py
dataset/scripts/: __init__.py  analyze.py  annotate.py  balance_report.py  catalog.py  complement_scan.py  describe_dataset.py  diagnose_scanners.py  discover.py  expand_dataset.py  findings_report.py  fix_multi_tool_consensus.py  live_progress.py  purge_page_level_findings.py  quick_scan_report.py  reset_consistent.py  scan.py  scan_status.py  snapshot.py  validate.py  watch_scan.py
docs/: ADDING_MODELS.md  ADDING_TOOLS.md  EXPERIMENTS.md  PROTOCOL.md
docs/paper/: Makefile  chapter3_methodology.tex  paper.tex
experiments/: ablation_agent_fixed.yaml  ablation_study.yaml  all_models_comparison.yaml  chosen_experiment.yaml  dataset_gpu_experiment.yaml  deterministic_baseline.yaml  experiment_14b_comparison.yaml  experiment_strong_linux.yaml  experiment_weak_gpu.yaml  qwen_vs_deepseek.yaml
memory/: MEMORY.md
scripts/: contamination_analysis.py  docker_validate.sh  download_models.py  monitor_experiment.sh  review_corrections.py  setup.py  setup_gpu_server.sh  transfer_data.sh
tests/: __init__.py
tests/e2e/: __init__.py  test_pipeline_e2e.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_experiments.py  test_llm_registry.py  test_protocol.py  test_router.py
(+14 files in other folders)
